--- a/ECommerceAPI/ECommerceAPI/Presentation/ECommerceAPI.API/ECommerceAPI.API.csproj
+++ b/ECommerceAPI/ECommerceAPI/Presentation/ECommerceAPI.API/ECommerceAPI.API.csproj
@@ -23,9 +23,11 @@
     <ProjectReference Include="..\..\Core\ECommerceAPI.Application\ECommerceAPI.Application.csproj" />
     <ProjectReference Include="..\..\Infrastructure\ECommerceAPI.Infrastructure\ECommerceAPI.Infrastructure.csproj" />
     <ProjectReference Include="..\..\Infrastructure\ECommerceAPI.Persistance\ECommerceAPI.Persistance.csproj" />
+    <ProjectReference Include="..\..\Infrastructure\ECommerceAPI.SignalR\ECommerceAPI.SignalR.csproj" />
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Middlewares\" />
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
