Developed Mail services on client and server sides

--- a/ECommerceAPI/ECommerceAPI/Presentation/ECommerceAPI.API/appsettings.json
+++ b/ECommerceAPI/ECommerceAPI/Presentation/ECommerceAPI.API/appsettings.json
@@ -15,6 +15,7 @@
     "Google": ""
   },
   "BaseStorageUrl": "https://minieticaret.blob.core.windows.net",
+  "AngularClientUrl": "http://localhost:4200",
   "Token": {
     "Audience": "www.bilmemne.com",
     "Issuer": "www.myapi.com",
@@ -31,6 +32,13 @@
   },
   "Seq": {
     "ServerURL": "http://localhost:5341"
+  },
+  "Mail": {
+    "Username": "bsozer06@gmail.com",
+    "Password": "xxxxxxxxxxxx",
+    "Port": "587",
+    "Host": "smtp.gmail.com"
   }
+
 
 }
