Created the completed order methods,models, etc

--- a/ECommerceAPI/ECommerceAPI/Presentation/ECommerceAPI.API/appsettings.json
+++ b/ECommerceAPI/ECommerceAPI/Presentation/ECommerceAPI.API/appsettings.json
@@ -35,7 +35,7 @@
   },
   "Mail": {
     "Username": "bsozer06@gmail.com",
-    "Password": "xxxxxxxxxxxx",
+    "Password": "iyqljmjhhzgbixhp",
     "Port": "587",
     "Host": "smtp.gmail.com"
   }
